style: use var with fixed header height
I created var with fixed height value and used it as header's height
so it can be deducted from the homepage section's height. Thanks to
that section can cover whole viewport height without overflowing

--- a/src/layouts/Navigation/Header/Header.module.scss
+++ b/src/layouts/Navigation/Header/Header.module.scss
@@ -2,12 +2,12 @@
 @use '../../../styles/mixins' as *;
 
 .container {
-  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   min-width: 340px;
+  height: var(--header-height);
   padding: var(--space-200) var(--space-400);
   box-shadow: var(--elevation-floating);
 }
